--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,7 @@ Dependencies/
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+### R.swift
+*.generated.swift
+
 # End of https://www.gitignore.io/api/xcode,swift,fastlane,carthage,cocoapods,objective-c
